Changes for 2.0.12rc1

New features:

Bug fixes:
..F....... [ZBX-7739] removed unused label in screen configuration page when no elements exist (Eduard)

--------------------------------------------------------------------------------
Changes for 2.0.11

2.0.11rc2 was released as 2.0.11 without any changes

--------------------------------------------------------------------------------
Changes for 2.0.11rc2

Bug fixes:
.......PS. [ZBX-7698] fixed closing a connection to the database when database server is unavailable (Sasha)
A......... [ZBX-7693] fixed admin user being able to update media for other users (Pavels)

--------------------------------------------------------------------------------
Changes for 2.0.11rc1

New features:
A.F....... [ZBX-1357] updated French, Italian, Japanese, Russian, Slovak and Ukrainian translations; thanks to Zabbix translators (Richlv)

Bug fixes:
..F....... [ZBX-7600] updated .htaccess files to be compatible with Apache 2.4 (Richlv)
....I..... [ZBX-7168] fixed configure.in template to properly link libcurl to all components independently (Juris)
A......... [ZBX-7703] fixed being able to switch users without proper credentials when using HTTP authentication (Pavels)
...G...... [ZBX-7648] fixed name resolution when using net.dns items (Juris)
........S. [ZBX-6315] fixed deleting of lost triggers by the low-level discovery rule (Sasha)
........S. [ZBX-7109] improved performance of processing discovered triggers by the low-level discovery rule (Sasha)
A.F....... [ZBX-4218] rewrote the item key parser's source code for independence on the mbstring.func_overload option (Sasha)
.......PS. [ZBX-7686] fixed UTF-8 strings not being fetched fully from Oracle (asaveljevs)
..F....... [ZBX-6721] fixed LDAP authentication (Eduard)
..F....... [ZBX-7609] fixed sound playing after frontend messages closing (Eduard)
..F....... [ZBX-7554] fixed script execution confirmation label encoding (Eduard)